[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "for_every_mwe_element: Runs a test with an MWE of each Cheetah `Element` subclass.",
    "no_mwe: A test case for which no minimal working example could be constructed.",
]
