[metadata]
name = cheetah-accelerator
version = 0.7.0
author = Jan Kaiser & Chenran Xu
author_email = jan.kaiser@desy.de
url = https://github.com/desy-ml/cheetah
description = A fast and differentiable simulation of particle accelerator optics for reinforcement learning and optimization applications.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires >=3.9
install_requires =
    matplotlib
    numpy
    scipy
    torch
    trimesh==4.6.13
    pyglet<2
include_package_data = True

[options.extras_require]
openpmd = openpmd-beamphysics

[options.package_data]
cheetah = _assets/*.glb

[options.entry_points]
console_scripts =
    view-lattice = cheetah.utils.segment_3d_builder:main
